// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit Test: config loader with application.yml empty 1`] = `Object {}`;

exports[`Unit Test: config loader with application.yml load application.yml 1`] = `
Object {
  "application": Object {
    "db": "test",
    "host": "127.0.0.1",
  },
}
`;

exports[`Unit Test: config loader with application.yml load with bad profile 1`] = `
Object {
  "application": Object {
    "db": "test",
    "host": "127.0.0.1",
  },
}
`;

exports[`Unit Test: config loader with application.yml load with prod profile 1`] = `
Object {
  "application": Object {
    "db": "test",
    "host": "prod.app.com",
  },
}
`;

exports[`Unit Test: config loader with config folder doesn't exist 1`] = `Object {}`;
